--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
     </nav>
   </header>
   <main>
-
+    <div>
+      <h2>Section 1</h2>
+    </div>
+    <div>
+      <h2>Section 2</h2>
+    </div>
   </main>
   <footer>
     <p>copyright 2020 @ FrancisClerfayt</p>
